# thermostat_tuya

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/tuyaopen/: CMakeLists.txt  Kconfig
components/tuyaopen/src/: Kconfig
components/tuyaopen/src/common/backoffAlgorithm/test/unit-test/: backoff_algorithm_utest.c
components/tuyaopen/src/common/include/: tuya_iot_config.h
components/tuyaopen/src/device_driver/: Kconfig
components/tuyaopen/src/libhttp/coreHTTP/source/: core_http_client.c
components/tuyaopen/src/libhttp/src/: http_client_wrapper.c  http_download.c
components/tuyaopen/src/liblwip/: Kconfig  Kconfig.new  Kconfig.old
components/tuyaopen/src/liblwip/lwip-2.1.2/src/core/: netif.c
components/tuyaopen/src/liblwip/lwip-2.1.2/src/core/ipv4/: eapol.c
components/tuyaopen/src/tal_kv/src/: kv_serialize.c
components/tuyaopen/src/tal_security/: CMakeLists.txt
components/tuyaopen/src/tal_security/src/mbedtls/: mbedtls_hash.c
components/tuyaopen/src/tal_system/src/: tal_fs.c  tal_log.c  tal_system.c
components/tuyaopen/src/tal_wifi/include/: tal_wifi.h
components/tuyaopen/src/tuya_cloud_service/cloud/: atop_base.c  atop_service.c  matop_service.c  tuya_http.c
components/tuyaopen/src/tuya_cloud_service/lan/: tuya_lan.c
components/tuyaopen/src/tuya_cloud_service/netcfg/: ap_netcfg.c
components/tuyaopen/src/tuya_cloud_service/protocol/: tuya_protocol.c
components/tuyaopen/src/tuya_cloud_service/schema/: dp_schema.c
components/tuyaos_adapter/: CMakeLists.txt
components/tuyaos_adapter/include/utilities/include/: tuya_cloud_types.h
components/tuyaos_adapter/include/utilities/src/: tuya_queue.c
components/tuyaos_adapter/src/drivers/: tkl_adc.c
main/: CMakeLists.txt  thermostat.c
